--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/phatograph/mangafetcher/issues"
+  },
+  "bin": {
+    "mangafetcher": "bin/mangafetcher"
   }
 }
