--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "async": "~0.2.9",
     "commander": "~2.0.0",
     "lodash": "~2.2.0",
-    "request": "~2.27.0"
+    "request": "~2.27.0",
+    "moment": "~2.3.1"
   },
   "devDependencies": {},
   "scripts": {
