--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "commander": "~2.0.0",
     "lodash": "~2.2.0",
     "request": "~2.27.0",
-    "moment": "~2.3.1"
+    "moment": "~2.3.1",
+    "cheerio": "~0.12.3"
   },
   "devDependencies": {},
   "scripts": {
