--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lodash": "~2.2.0",
     "request": "~2.27.0",
     "moment": "~2.3.1",
-    "cheerio": "~0.12.3"
+    "cheerio": "~0.12.3",
+    "cli-color": "~0.2.3"
   },
   "devDependencies": {},
   "scripts": {
