--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "request": "~2.27.0",
     "moment": "~2.3.1",
     "cheerio": "~0.12.3",
-    "cli-color": "~0.2.3"
+    "cli-color": "~0.2.3",
+    "coffee-script": "~1.6.3"
   },
   "devDependencies": {},
   "scripts": {
